# cmake_practice

./: .gitignore  LICENSE  README.md
proj1_app/: CMakeLists.txt  README.md  app.cpp
proj1_app/include/: app.h
